<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>duckie_simulation</name>
  <version>0.0.1</version>
  <description>Gazebo simulation for the Duckie lane-following robot</description>
  <maintainer email="akhiljithvg444@gmail.com">akhiljith</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>

  <exec_depend>duckie_perception</exec_depend>
  <exec_depend>duckie_safety</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
